--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                 <a class="folio-list__item-link" href="#modal-01">
                                     <div class="folio-list__item-pic">
                                         <img src="images/portfolio/SmartGPT600x600.png"
-                                             srcset="images/portfolio/SmartGPT600x600.png 1x, images/portfolio/SmartGPT600x600@2x.jpg 2x"  alt="">
+                                             srcset="images/portfolio/SmartGPT600x600.png 1x, images/portfolio/SmartGPT600x600@2x.png 2x"  alt="">
                                     </div>
                                     
                                     <div class="folio-list__item-text">
