Updated CV File

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             <p class="attention-getter" data-animate-el>
                                 I'm an experienced JavaScript Fullstack Developer with a passion for building scalable and efficient web applications, although I lean towards the Backend development side of things. I am proficient in JavaScript, Node.js, Next.js. I have a solid understanding of Software Development principles and a keen eye for detail and organisation. I am eager to contribute my technical skills and collaborative mindset to a dynamic development team, while continuously expanding my knowledge and staying up-to-date with the latest industry trends.
                             </p>
-                            <a href="./Nelson-Ayodeji.pdf" download="Ayodeji-Nelson" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
+                            <a href="./Ayodeji-Nelson-Resume.pdf" download="Ayodeji-Nelson" class="btn btn--medium u-fullwidth" data-animate-el>Download CV</a>
 
                         </div>
                     </div>
